fixed Broken read me markdown, and it being Hard to scroll on mobile

--- a/src/app/projects/[id]/project.module.css
+++ b/src/app/projects/[id]/project.module.css
@@ -5,7 +5,7 @@
 
 .projectContainer {
   background: #F2F2F2;
-  height: calc(100vh - 24px);
+  min-height: calc(100vh - 24px);
   display: flex;
   gap: 8px;
   padding: 12px;
@@ -45,7 +45,6 @@
   background: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .project > .header {
